CIRC-2552 Limit 2000 for search slips, 100_000 for pick slips